--- a/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
+++ b/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "tmmxtkmgrpif227aawe6",
+   "notebookId": "4beyjnihfbxc5tcyc7qi",
    "authorId": "322325853055",
    "authorName": "CROMANO",
    "authorEmail": "chase.romano@snowflake.com",
    "sessionId": "5339fb8c-8f99-43f9-9da2-37f95b22b7a8",
-   "lastEditTime": 1755134316936
+   "lastEditTime": 1755136899136
   }
  },
  "nbformat_minor": 5,
@@ -45,7 +45,7 @@
     "language": "python",
     "name": "load_docs"
    },
-   "source": "MY_STAGE = 'EXAMPLE_DOCS/machine_reports'\nMY_FILE_NAME = \"data/docs/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status",
+   "source": "MY_STAGE = 'EXAMPLE_DOCS/machine_reports'\nMY_FILE_NAME = \"data/docs/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status\n\nMY_STAGE = 'EXAMPLE_DOCS/resumes'\nMY_FILE_NAME = \"data/docs/resumes/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status",
    "execution_count": null,
    "outputs": []
   },
@@ -79,7 +79,7 @@
     "name": "wait"
    },
    "outputs": [],
-   "source": "time.sleep(120)",
+   "source": "# Added this because sometimes it takes time to upload files\ntime.sleep(120)",
    "execution_count": null
   },
   {
@@ -91,17 +91,6 @@
    },
    "outputs": [],
    "source": "SELECT \nrelative_path,\n  json_data:response.date::STRING as response_date,\n  json_data:response.name::STRING as inspector,\n  json_data:response.grade::STRING as grade,\n  json_data:response.machine::STRING as machine\nfrom\n(\nSELECT \nrelative_path,\nAI_EXTRACT(\n  file => TO_FILE('@EXAMPLE_DOCS',RELATIVE_PATH),\n  responseFormat => [['name', 'Who inspected the machine?'], \n  ['date', 'What was the date of the inspection?'],\n  ['grade', 'What was the grade of the inspection?'],\n  ['machine', 'What machine was inspected?']]\n) as json_data\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'machine_reports/%'\n);",
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "b9b0ec43-2b4f-4183-bad4-f0fcae6d830a",
-   "metadata": {
-    "language": "python",
-    "name": "upload_resumes"
-   },
-   "outputs": [],
-   "source": "MY_STAGE = 'EXAMPLE_DOCS/resumes'\nMY_FILE_NAME = \"data/docs/resumes/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status",
    "execution_count": null
   },
   {
@@ -141,7 +130,7 @@
     "name": "Parse_resume"
    },
    "outputs": [],
-   "source": "SELECT \nrelative_path,\nSNOWFLAKE.CORTEX.PARSE_DOCUMENT('@EXAMPLE_DOCS',relative_path):content::STRING AS resume_text,\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'resumes/%'\nlimit 1;",
+   "source": "SELECT \nrelative_path,\nSNOWFLAKE.CORTEX.PARSE_DOCUMENT('@EXAMPLE_DOCS',relative_path):content::STRING AS resume_text,\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'resumes/%'\nlimit 5;",
    "execution_count": null
   },
   {
@@ -233,6 +222,37 @@
    },
    "outputs": [],
    "source": "with parsed_reports as (\nSELECT \nSNOWFLAKE.CORTEX.PARSE_DOCUMENT('@EXAMPLE_DOCS',relative_path):content::STRING AS report_text\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'machine_reports/%'\n)\nSelect \n    AI_AGG(report_text, 'What were the main reasons for machines not passing inspection?')\nfrom parsed_reports;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7856588a-f71a-4502-911c-502979199606",
+   "metadata": {
+    "name": "summarize",
+    "collapsed": false
+   },
+   "source": "Use AI_AGG to extract skills accross expertise"
+  },
+  {
+   "cell_type": "code",
+   "id": "020ff151-462b-48bb-95e4-b44f6fb2d7f7",
+   "metadata": {
+    "language": "sql",
+    "name": "experties_table"
+   },
+   "outputs": [],
+   "source": "create or replace temporary table expertise as\nSelect resume_text,\n    AI_CLASSIFY(\n        resume_text, \n        ['entry level', 'management level', 'executive level'],\n        {\n            'task_description':'Categorize the candidate into one of the given levels of expertise'\n        }):labels[0]::string as expertise\nfrom candidates;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "64b031db-10b3-4bc0-8130-7908e5ec3989",
+   "metadata": {
+    "language": "sql",
+    "name": "AI_AGG_GROUP_BY"
+   },
+   "outputs": [],
+   "source": "SELECT expertise,\n       AI_AGG(resume_text, 'What are some common skills across these resumes?  List them in an array []') AS summarized_resumes\n  FROM expertise\n GROUP BY expertise;",
    "execution_count": null
   }
  ]
