Remove wait cell and clean up

--- a/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
+++ b/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "4beyjnihfbxc5tcyc7qi",
+   "notebookId": "mzrb45o6xm56rapm4tvb",
    "authorId": "322325853055",
    "authorName": "CROMANO",
    "authorEmail": "chase.romano@snowflake.com",
-   "sessionId": "5339fb8c-8f99-43f9-9da2-37f95b22b7a8",
-   "lastEditTime": 1755136899136
+   "sessionId": "ea8862d8-e99b-4c02-9873-66d74664c4c3",
+   "lastEditTime": 1755143184222
   }
  },
  "nbformat_minor": 5,
@@ -34,9 +34,18 @@
     "language": "sql",
     "name": "create_stage"
    },
-   "source": "CREATE STAGE if not exists EXAMPLE_DOCS \n\tDIRECTORY = ( ENABLE = true ) \n\tENCRYPTION = ( TYPE = 'SNOWFLAKE_SSE' );",
+   "source": "create stage if not exists EXAMPLE_DOCS \n\tDIRECTORY = ( ENABLE = true \n                  AUTO_REFRESH = TRUE) \n\tENCRYPTION = ( TYPE = 'SNOWFLAKE_SSE' );",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1336684-5c11-4944-bba9-118d3a55df51",
+   "metadata": {
+    "name": "Load_docs_md",
+    "collapsed": false
+   },
+   "source": "Load documents into a Snowflake stage"
   },
   {
    "cell_type": "code",
@@ -45,9 +54,42 @@
     "language": "python",
     "name": "load_docs"
    },
-   "source": "MY_STAGE = 'EXAMPLE_DOCS/machine_reports'\nMY_FILE_NAME = \"data/docs/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status\n\nMY_STAGE = 'EXAMPLE_DOCS/resumes'\nMY_FILE_NAME = \"data/docs/resumes/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status",
+   "source": "MY_STAGE = 'EXAMPLE_DOCS/machine_reports'\nMY_FILE_NAME = \"data/docs/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\n\nMY_STAGE = 'EXAMPLE_DOCS/resumes'\nMY_FILE_NAME = \"data/docs/resumes/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status",
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "id": "ccf444cf-22b6-466e-91b5-a3a00ac7a680",
+   "metadata": {
+    "language": "sql",
+    "name": "refresh_directory_table"
+   },
+   "outputs": [],
+   "source": "alter stage example_docs refresh;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bcde592-afa7-4fba-9140-8bb0cd5974aa",
+   "metadata": {
+    "name": "AI_EXTRACT_MD",
+    "collapsed": false
+   },
+   "source": "AI_EXTRACT leverages Snowflake's Vision model Arctic-extract.  It is a vision model so we do not need to perform OCR, and then ask questions.  We can ask questions directly on documents.  Below we ask 2 questions about 1 document"
+  },
+  {
+   "cell_type": "code",
+   "id": "149218a4-9109-4940-b4e7-ecb91412406a",
+   "metadata": {
+    "language": "python",
+    "name": "example_doc",
+    "collapsed": false,
+    "codeCollapsed": true
+   },
+   "outputs": [],
+   "source": "st.image('data/docs/example_doc.png')",
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -61,6 +103,15 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "id": "9800e75a-2a31-4a0a-9d43-ea7e0d887931",
+   "metadata": {
+    "name": "classification_md",
+    "collapsed": false
+   },
+   "source": "We can even use it for classification"
+  },
+  {
    "cell_type": "code",
    "id": "39dd76df-fa8e-44b5-966c-d020e4859f8d",
    "metadata": {
@@ -72,15 +123,13 @@
    "execution_count": null
   },
   {
-   "cell_type": "code",
-   "id": "8a85f09e-3a8f-47f7-9157-afe8f27490c2",
+   "cell_type": "markdown",
+   "id": "4eb1c339-39b8-4f4a-b379-ddc21cef2b07",
    "metadata": {
-    "language": "python",
-    "name": "wait"
+    "name": "Batch_Extract",
+    "collapsed": false
    },
-   "outputs": [],
-   "source": "# Added this because sometimes it takes time to upload files\ntime.sleep(120)",
-   "execution_count": null
+   "source": "Here we can run AI_EXTRACT on multiple files"
   },
   {
    "cell_type": "code",
