--- a/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
+++ b/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "ymhdfsdfsr674xnba7sb",
+   "notebookId": "oag4frbkd7msihuyuwza",
    "authorId": "322325853055",
    "authorName": "CROMANO",
    "authorEmail": "chase.romano@snowflake.com",
-   "sessionId": "2dca50fa-c84a-409c-9e0e-46e90443457e",
-   "lastEditTime": 1755188061010
+   "sessionId": "0d691360-83a7-4017-a97b-2c1102a100b2",
+   "lastEditTime": 1755274905709
   }
  },
  "nbformat_minor": 5,
