--- a/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
+++ b/DOC_EXTRACT_AISQL/DOC_EXTRACT_AISQL.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "oag4frbkd7msihuyuwza",
+   "notebookId": "ymhdfsdfsr674xnba7sb",
    "authorId": "322325853055",
    "authorName": "CROMANO",
    "authorEmail": "chase.romano@snowflake.com",
-   "sessionId": "0d691360-83a7-4017-a97b-2c1102a100b2",
-   "lastEditTime": 1755274905709
+   "sessionId": "116f6833-398b-46bb-b07d-0313dee4e1c4",
+   "lastEditTime": 1755708985227
   }
  },
  "nbformat_minor": 5,
@@ -313,6 +313,68 @@
    },
    "outputs": [],
    "source": "SELECT expertise,\n       AI_AGG(resume_text, 'What are some common skills across these resumes?  List them in an array []') AS summarized_resumes\n  FROM expertise\n GROUP BY expertise;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d9a349c-3115-4c0f-bb82-1128e75a6442",
+   "metadata": {
+    "name": "sentiment",
+    "collapsed": false
+   },
+   "source": "Sentiment"
+  },
+  {
+   "cell_type": "code",
+   "id": "d01951a6-f65e-40b4-b877-d0b0356036f2",
+   "metadata": {
+    "language": "python",
+    "name": "load_reviews"
+   },
+   "outputs": [],
+   "source": "movies = pd.read_csv('data/movie_reviews_dataset.csv')\nmovies.columns = [c.upper() for c in movies.columns]\nmovies_sf = session.create_dataframe(movies)\nmovies_sf.write.mode(\"overwrite\").save_as_table(\"movie_reviews\")",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "9de59c78-b5c5-4f48-9e8f-b0918fe095c2",
+   "metadata": {
+    "language": "sql",
+    "name": "show_reviews"
+   },
+   "outputs": [],
+   "source": "select * from movie_reviews",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "447b62f2-8022-4185-a097-b7defcc57bbb",
+   "metadata": {
+    "language": "sql",
+    "name": "sentiment_overall"
+   },
+   "outputs": [],
+   "source": "SELECT\n  AI_SENTIMENT(\n    review\n  ),\n  review\n  FROM movie_reviews LIMIT 10;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "id": "050f3d61-2bce-4262-a4d2-727077b3d16d",
+   "metadata": {
+    "name": "sentiment_md",
+    "collapsed": false
+   },
+   "source": "Sometimes sentiment is mixed.  A scale of -1 to 1 cannot help with this.  Snowflake gives back mixed and now we can figure out what topics had different sentiment within the review."
+  },
+  {
+   "cell_type": "code",
+   "id": "eace610e-a957-47d4-a57a-3bcaea1aeb69",
+   "metadata": {
+    "language": "sql",
+    "name": "sentiment_cat"
+   },
+   "outputs": [],
+   "source": "SELECT\n  AI_SENTIMENT(\n    review,\n    ['concept', 'performance', 'script', 'cinematography', 'soundtrack']\n  ),\n  review\n  FROM movie_reviews LIMIT 10;",
    "execution_count": null
   }
  ]
