--- a/ENTITY_RESOLUTION/BATCH_SEARCH_DEMO_GA.ipynb
+++ b/ENTITY_RESOLUTION/BATCH_SEARCH_DEMO_GA.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "d6vffbbbvw6ovfioatlz",
-   "authorId": "322325853055",
-   "authorName": "CROMANO",
+   "notebookId": "xpvszsjh3or2ttqolzdc",
+   "authorId": "4927852566776",
+   "authorName": "CHASE",
    "authorEmail": "chase.romano@snowflake.com",
-   "sessionId": "02cf57b2-eefe-45de-85bc-4ad57ec4366e",
-   "lastEditTime": 1758575222446
+   "sessionId": "27cf3f70-b84c-48fd-b831-7081a438fa64",
+   "lastEditTime": 1758919862984
   }
  },
  "nbformat_minor": 5,
@@ -108,8 +108,17 @@
     "name": "Create_Search_Service"
    },
    "outputs": [],
-   "source": "# session.sql(f'''CREATE OR REPLACE CORTEX SEARCH SERVICE PRODUCT_LOOKUP\n#   ON ITEM\n#   ATTRIBUTES ID\n#   WAREHOUSE = {current_wh}\n#   TARGET_LAG = '1 day'\n#   EMBEDDING_MODEL = 'snowflake-arctic-embed-l-v2.0'\n#   AS (\n#     SELECT\n#         ID,\n#         ITEM\n#     FROM amazon_lookup)''')",
+   "source": "session.sql(f'''CREATE OR REPLACE CORTEX SEARCH SERVICE PRODUCT_LOOKUP\n  ON ITEM\n  ATTRIBUTES ID\n  WAREHOUSE = {current_wh}\n  TARGET_LAG = '1 day'\n  EMBEDDING_MODEL = 'snowflake-arctic-embed-l-v2.0'\n  AS (\n    SELECT\n        ID,\n        ITEM\n    FROM amazon_lookup)''')",
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7068ffc3-b542-44bf-8504-1507efb10e1a",
+   "metadata": {
+    "name": "_experimental",
+    "collapsed": false
+   },
+   "source": "### Comment out line 48 if you have not had your account team enable experimental"
   },
   {
    "cell_type": "code",
@@ -119,7 +128,7 @@
     "name": "Create_Batch_Search"
    },
    "outputs": [],
-   "source": "CREATE OR REPLACE PROCEDURE batch_cortex_search(\n    db_name STRING, \n    schema_name STRING, \n    service_name STRING, \n    queries ARRAY, \n    columns ARRAY, \n    n_jobs INTEGER DEFAULT -1\n)\nRETURNS VARIANT\nLANGUAGE PYTHON\nPACKAGES = ('snowflake-snowpark-python==1.9.0', 'joblib==1.4.2', 'backoff==2.2.1')\nRUNTIME_VERSION = '3.10'\nHANDLER = 'main'\nAS\n$$\nimport _snowflake\nimport json\nfrom joblib import Parallel, delayed\nimport backoff\nfrom snowflake.snowpark import Session\nfrom snowflake.snowpark.functions import col\n\n# Helper function to call the API with retry logic\n@backoff.on_exception(backoff.expo, Exception, max_tries=5, giveup=lambda e: not (isinstance(e, Exception) and hasattr(e, \"args\") and len(e.args) > 0 and isinstance(e.args[0], dict) and e.args[0].get(\"status\") == 429))\ndef call_api(db_name, schema_name, service_name, request_body):\n    \"\"\"Calls the Cortex Search REST API with retry logic for rate limiting.\"\"\"\n    resp = _snowflake.send_snow_api_request(\n        \"POST\",\n        f\"/api/v2/databases/{db_name}/schemas/{schema_name}/cortex-search-services/{service_name}:query\",\n        {},\n        {},\n        request_body,\n        {},\n        30000,\n    )\n    if resp[\"status\"] == 429:\n        raise Exception({\"status\": resp[\"status\"], \"content\": resp[\"content\"]})\n    return resp\n\n# Function to call the API for a single query\ndef search(db_name, schema_name, service_name, query, columns):\n    \"\"\"Calls the Cortex Search REST API and returns the response without filters.\"\"\"\n    \n    request_body = {\n        \"query\": query,\n        \"columns\": columns,\n        \"limit\": 3 # You can adjust this limit if needed\n    }\n    try:\n        resp = call_api(db_name, schema_name, service_name, request_body)\n        if resp[\"status\"] < 400:\n            response_content = json.loads(resp[\"content\"])\n            results = response_content.get(\"results\", [])\n            return {\"query\": query, \"results\": results}\n        else:\n            return {\"query\": query, \"results\": f\"Failed request with status {resp['status']}: {resp}\"}\n    except Exception as e:\n        return {\"query\": query, \"results\": f\"API Error: {e}\"}\n\n# Function to process queries concurrently using batch size\ndef concurrent_searches(db_name, schema_name, service_name, queries, columns, n_jobs):\n    \"\"\"Calls the Cortex Search REST API for multiple queries and returns the response without filters.\"\"\"\n    results = Parallel(n_jobs=n_jobs, backend='threading')(\n        delayed(search)(db_name, schema_name, service_name, q, columns) for q in queries\n    )\n    return results\n\n# Main function to handle batching and inserting results\ndef main(session: Session, db_name, schema_name, service_name, queries, columns, n_jobs):\n    if isinstance(queries, list) and len(queries) > 0:\n        # Split queries into batches of 500\n        batch_size = 500\n        total_queries = len(queries)\n        batches = [queries[i:i + batch_size] for i in range(0, total_queries, batch_size)]\n        \n        # Loop through each batch and process\n        for batch in batches:\n            # Perform concurrent searches for this batch\n            batch_results = concurrent_searches(db_name, schema_name, service_name, batch, columns, n_jobs)\n            \n            # Create a list to hold the results for batch insertion\n            insert_values = []\n\n            # Prepare the results for batch insert\n            for result in batch_results:\n                insert_values.append({\n                    \"QUERY\": result[\"query\"],\n                    \"RESULTS\": json.dumps(result[\"results\"])\n                })\n\n            # Insert the results into the BATCH_SEARCH_RESULTS table using Snowpark\n            if insert_values:\n                # Create a DataFrame with the results\n                df = session.create_dataframe(insert_values)\n\n                # Perform the batch insert into BATCH_SEARCH_RESULTS\n                df.write.mode(\"append\").save_as_table(\"BATCH_SEARCH_RESULTS\")\n\n        return {\"status\": \"Success\", \"message\": f\"{total_queries} queries processed in batches.\"}\n    else:\n        raise ValueError(\"Queries must be an array of query text\")\n$$;",
+   "source": "CREATE OR REPLACE PROCEDURE batch_cortex_search(\n    db_name STRING, \n    schema_name STRING, \n    service_name STRING, \n    queries ARRAY, \n    columns ARRAY, \n    n_jobs INTEGER DEFAULT -1\n)\nRETURNS VARIANT\nLANGUAGE PYTHON\nPACKAGES = ('snowflake-snowpark-python==1.9.0', 'joblib==1.4.2', 'backoff==2.2.1')\nRUNTIME_VERSION = '3.10'\nHANDLER = 'main'\nAS\n$$\nimport _snowflake\nimport json\nfrom joblib import Parallel, delayed\nimport backoff\nfrom snowflake.snowpark import Session\nfrom snowflake.snowpark.functions import col\n\n# Helper function to call the API with retry logic\n@backoff.on_exception(backoff.expo, Exception, max_tries=5, giveup=lambda e: not (isinstance(e, Exception) and hasattr(e, \"args\") and len(e.args) > 0 and isinstance(e.args[0], dict) and e.args[0].get(\"status\") == 429))\ndef call_api(db_name, schema_name, service_name, request_body):\n    \"\"\"Calls the Cortex Search REST API with retry logic for rate limiting.\"\"\"\n    resp = _snowflake.send_snow_api_request(\n        \"POST\",\n        f\"/api/v2/databases/{db_name}/schemas/{schema_name}/cortex-search-services/{service_name}:query\",\n        {},\n        {},\n        request_body,\n        {},\n        30000,\n    )\n    if resp[\"status\"] == 429:\n        raise Exception({\"status\": resp[\"status\"], \"content\": resp[\"content\"]})\n    return resp\n\n# Function to call the API for a single query\ndef search(db_name, schema_name, service_name, query, columns):\n    \"\"\"Calls the Cortex Search REST API and returns the response without filters.\"\"\"\n    \n    request_body = {\n        \"query\": query,\n        \"columns\": columns,\n        \"limit\": 1,\n        \"experimental\": {\"returnConfidenceScores\": True}\n    }\n    try:\n        resp = call_api(db_name, schema_name, service_name, request_body)\n        if resp[\"status\"] < 400:\n            response_content = json.loads(resp[\"content\"])\n            results = response_content.get(\"results\", [])\n            return {\"query\": query, \"results\": results}\n        else:\n            return {\"query\": query, \"results\": f\"Failed request with status {resp['status']}: {resp}\"}\n    except Exception as e:\n        return {\"query\": query, \"results\": f\"API Error: {e}\"}\n\n# Function to process queries concurrently using batch size\ndef concurrent_searches(db_name, schema_name, service_name, queries, columns, n_jobs):\n    \"\"\"Calls the Cortex Search REST API for multiple queries and returns the response without filters.\"\"\"\n    results = Parallel(n_jobs=n_jobs, backend='threading')(\n        delayed(search)(db_name, schema_name, service_name, q, columns) for q in queries\n    )\n    return results\n\n# Main function to handle batching and inserting results\ndef main(session: Session, db_name, schema_name, service_name, queries, columns, n_jobs):\n    if isinstance(queries, list) and len(queries) > 0:\n        # Split queries into batches of 500\n        batch_size = 500\n        total_queries = len(queries)\n        batches = [queries[i:i + batch_size] for i in range(0, total_queries, batch_size)]\n        \n        # Loop through each batch and process\n        for batch in batches:\n            # Perform concurrent searches for this batch\n            batch_results = concurrent_searches(db_name, schema_name, service_name, batch, columns, n_jobs)\n            \n            # Create a list to hold the results for batch insertion\n            insert_values = []\n\n            # Prepare the results for batch insert\n            for result in batch_results:\n                insert_values.append({\n                    \"QUERY\": result[\"query\"],\n                    \"RESULTS\": json.dumps(result[\"results\"])\n                })\n\n            # Insert the results into the BATCH_SEARCH_RESULTS table using Snowpark\n            if insert_values:\n                # Create a DataFrame with the results\n                df = session.create_dataframe(insert_values)\n\n                # Perform the batch insert into BATCH_SEARCH_RESULTS\n                df.write.mode(\"append\").save_as_table(\"BATCH_SEARCH_RESULTS\")\n\n        return {\"status\": \"Success\", \"message\": f\"{total_queries} queries processed in batches.\"}\n    else:\n        raise ValueError(\"Queries must be an array of query text\")\n$$;\n     ",
    "execution_count": null
   },
   {
@@ -156,6 +165,15 @@
    "execution_count": null
   },
   {
+   "cell_type": "markdown",
+   "id": "84737d7c-af39-4518-b868-5388c766c3fe",
+   "metadata": {
+    "name": "Db_Schema_Update",
+    "collapsed": false
+   },
+   "source": "### Replace lines 5 and 6 in the next cell with your DB and Schema"
+  },
+  {
    "cell_type": "code",
    "id": "857f01d8-9e0b-470c-8c6d-1a506d82c0b4",
    "metadata": {
@@ -163,7 +181,7 @@
     "name": "Call_Batch_Search"
    },
    "outputs": [],
-   "source": "#  Replace lines 5 and 6 with your DB and Schema\n\nsession.sql(f'''\nCALL batch_cortex_search(\n    'cromano',\n    'demo',\n    'PRODUCT_LOOKUP',\n    (SELECT ARRAY_AGG(ITEM) FROM google_lookup),\n    ARRAY_CONSTRUCT('ID','ITEM'),\n    -1\n)\n''')",
+   "source": "#  Replace lines 5 and 6 with your DB and Schema\n\nsession.sql(f'''\nCALL batch_cortex_search(\n    'demo',\n    'public',\n    'PRODUCT_LOOKUP',\n    (SELECT ARRAY_AGG(ITEM) FROM google_lookup),\n    ARRAY_CONSTRUCT('ID','ITEM'),\n    -1\n)\n''')",
    "execution_count": null
   },
   {
@@ -174,7 +192,7 @@
     "name": "View_Search_results"
    },
    "outputs": [],
-   "source": "select * from BATCH_SEARCH_RESULTS\nlimit 5;",
+   "source": "select * from BATCH_SEARCH_RESULTS\nlimit 10;",
    "execution_count": null
   },
   {
