Add fine tuning

--- a/DOC_EXTRACT_AISQL/Fine_Tune.ipynb
+++ b/DOC_EXTRACT_AISQL/Fine_Tune.ipynb
@@ -5,26 +5,17 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "po5gvhezcapopngdwkza",
+   "notebookId": "q6bihoemv4c4rchnoo6o",
    "authorId": "4927852566776",
    "authorName": "CHASE",
    "authorEmail": "chase.romano@snowflake.com",
-   "sessionId": "29b490c1-9b0d-4cc0-912b-89aaad277979",
-   "lastEditTime": 1759501368998
+   "sessionId": "9e70e12e-b833-4988-86ff-823722fa23fb",
+   "lastEditTime": 1762283522599
   }
  },
  "nbformat_minor": 5,
  "nbformat": 4,
  "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "cf35b49e-99f6-4a50-a872-018dd08e1a4f",
-   "metadata": {
-    "name": "introduction",
-    "collapsed": false
-   },
-   "source": "# Snowflake AISQL & Document Processing Demo \nIn this demo notebook, we'll show how powerful Snowflake AISQL is and how easy it is to get started. We'll be working with inspection forms, resumes, and movie reviews to demonstrate the following AISQL functions. \n\n- AI_EXTRACT\n- AI_PARSE_DOCUMENT\n- AI_FILTER\n- AI_CLASSIFY\n- AI_AGG\n- AI_SENTIMENT\n\nA full list of AISQL functions can be found in the [Snowflake Documentation](https://docs.snowflake.com/en/user-guide/snowflake-cortex/aisql)\n\n### Setup: \n- Option 1: Run the setup scripts in the repo, create a git repository in Snowflake, then create a notebook from that repo.\n- Option 2: Load the data from the data folder in the repo into the local Snowflake Notebook environment"
-  },
   {
    "cell_type": "code",
    "id": "3775908f-ca36-4846-8f38-5adca39217f2",
@@ -32,20 +23,9 @@
     "language": "python",
     "name": "imports"
    },
-   "source": "# Import python packages\nimport streamlit as st\nimport pandas as pd\nimport time\n\n# We can also use Snowpark for our analyses!\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n",
+   "source": "# Import python packages\nimport streamlit as st\nimport pandas as pd\n\n# We can also use Snowpark for our analyses!\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n",
    "execution_count": null,
    "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "id": "c5b4c617-9dbf-46b0-bcaa-510a450481c7",
-   "metadata": {
-    "language": "python",
-    "name": "AISQL_Slide"
-   },
-   "outputs": [],
-   "source": "st.image('data/AISQL_Slide.png')",
-   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -54,7 +34,7 @@
     "language": "sql",
     "name": "create_stage"
    },
-   "source": "create or replace stage EXAMPLE_DOCS \n\tDIRECTORY = ( ENABLE = true \n                  AUTO_REFRESH = TRUE) \n\tENCRYPTION = ( TYPE = 'SNOWFLAKE_SSE' );",
+   "source": "create stage if not exists EXAMPLE_DOCS \n\tDIRECTORY = ( ENABLE = true \n                  AUTO_REFRESH = TRUE) \n\tENCRYPTION = ( TYPE = 'SNOWFLAKE_SSE' );",
    "execution_count": null,
    "outputs": []
   },
@@ -74,7 +54,7 @@
     "language": "python",
     "name": "load_docs"
    },
-   "source": "MY_STAGE = 'EXAMPLE_DOCS/machine_reports'\nMY_FILE_NAME = \"data/docs/machine_reports/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\n\nMY_STAGE = 'EXAMPLE_DOCS/resumes'\nMY_FILE_NAME = \"data/docs/resumes/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)\nput_result[0].status",
+   "source": "MY_STAGE = 'EXAMPLE_DOCS/machine_reports'\nMY_FILE_NAME = \"data/docs/machine_reports/*.pdf\"\n\n\n# Upload the file to a stage.\nput_result = session.file.put(MY_FILE_NAME, MY_STAGE, auto_compress=False,overwrite=True)",
    "execution_count": null,
    "outputs": []
   },
@@ -113,43 +93,69 @@
   },
   {
    "cell_type": "code",
-   "id": "d0c33b3c-0445-41d0-ac6f-560c1987d4d3",
+   "id": "a581342c-7cb8-4e2a-ad9c-1990553880bc",
    "metadata": {
     "language": "sql",
-    "name": "run_AI_EXTRACT"
+    "name": "create_FT_Table"
    },
    "outputs": [],
-   "source": "SELECT AI_EXTRACT(\n  file => TO_FILE('@EXAMPLE_DOCS/machine_reports','Manual_2022-02-01.pdf'),\n  responseFormat => [['name', 'Who inspected the machine?'], ['date', 'What was the date of the inspection?']],\n  config => {'output_details': 'True'}\n) as json_data",
+   "source": "CREATE OR REPLACE TABLE my_data_table (f FILE, p VARCHAR, r VARCHAR);",
    "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9800e75a-2a31-4a0a-9d43-ea7e0d887931",
-   "metadata": {
-    "name": "classification_md",
-    "collapsed": false
-   },
-   "source": "We can even use it for classification"
   },
   {
    "cell_type": "code",
-   "id": "39dd76df-fa8e-44b5-966c-d020e4859f8d",
+   "id": "0459a76d-1702-40cc-a64d-f06941f773d3",
    "metadata": {
     "language": "sql",
-    "name": "use_for_classification"
+    "name": "_Create_FT_Data"
    },
    "outputs": [],
-   "source": "SELECT AI_EXTRACT(\n  file => TO_FILE('@EXAMPLE_DOCS/machine_reports','Manual_2022-02-01.pdf'),\n  responseFormat => [['name', 'does this doc have a name? Answer Yes or No']]\n) as json_data",
+   "source": "INSERT INTO my_data_table (f, p, r)\nSELECT \nTO_FILE('@EXAMPLE_DOCS/machine_reports', 'Manual_2022-02-01.pdf'), \n'{\"Name\": \"Who inspected the machine?\",\n  \"Date\": \"What was the date of the inspection?\",\n  \"Serial Number\": \"What is the Serial Number of the machine\"\n    }', \n'{\"Name\": \"Emily Johnson\",\n  \"Date\": \"2022-02-01\",\n  \"Serial Number\": \"SGMM-12345\"}';",
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "4eb1c339-39b8-4f4a-b379-ddc21cef2b07",
+   "cell_type": "code",
+   "id": "ddbad874-1f49-4d1f-9fd7-49b5dddecebf",
    "metadata": {
-    "name": "batch_extract",
-    "collapsed": false
+    "language": "sql",
+    "name": "_Show_FT_Data"
    },
-   "source": "Here we can run AI_EXTRACT on multiple files"
+   "outputs": [],
+   "source": "Select * from my_data_table",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "f14e124d-e103-4756-958e-379745ad09d8",
+   "metadata": {
+    "language": "sql",
+    "name": "_Create_Dataset"
+   },
+   "outputs": [],
+   "source": "CREATE OR REPLACE DATASET my_dataset;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "6b6eeeec-1cdd-4240-8038-798aa73f7b60",
+   "metadata": {
+    "language": "sql",
+    "name": "_Dataset_Train"
+   },
+   "outputs": [],
+   "source": "ALTER DATASET my_dataset\nADD VERSION 'v1' FROM (\n  SELECT FL_GET_STAGE(f) || '/' || FL_GET_RELATIVE_PATH(f) AS \"file\",\n       p AS \"prompt\",\n       r AS \"response\"\n  FROM my_data_table\n);",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "8fea6697-c038-4df5-80f7-5a3b7c291540",
+   "metadata": {
+    "language": "sql",
+    "name": "_Fine_tune"
+   },
+   "outputs": [],
+   "source": "SELECT SNOWFLAKE.CORTEX.FINETUNE(\n  'CREATE',\n  'machine_docs_fine_tuned',\n  'arctic-extract',\n  'snow://dataset/demo.public.my_dataset/versions/v1'\n);",
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -159,211 +165,7 @@
     "name": "parse_AI_EXTRACT"
    },
    "outputs": [],
-   "source": "SELECT \nrelative_path,\n  json_data:response.date::STRING as response_date,\n  json_data:response.name::STRING as inspector,\n  json_data:response.grade::STRING as grade,\n  json_data:response.machine::STRING as machine\nfrom\n(\nSELECT \nrelative_path,\nAI_EXTRACT(\n  file => TO_FILE('@EXAMPLE_DOCS',RELATIVE_PATH),\n  responseFormat => [['name', 'Who inspected the machine?'], \n  ['date', 'What was the date of the inspection?'],\n  ['grade', 'What was the grade of the inspection?'],\n  ['machine', 'What machine was inspected?']]\n) as json_data\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'machine_reports/%'\n);",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3bb0c21b-3224-4d0e-abad-4a906c35703c",
-   "metadata": {
-    "name": "AI_EXTRACT_intro",
-    "collapsed": false
-   },
-   "source": "Extract key information from resume using AI_EXTRACT"
-  },
-  {
-   "cell_type": "code",
-   "id": "a602e542-7ee5-4b14-95e7-0f88255bd093",
-   "metadata": {
-    "language": "python",
-    "name": "view_resume"
-   },
-   "outputs": [],
-   "source": "st.image('data/docs/resumes/example_resume.png')",
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "5b544dca-bf08-4751-a794-47409e39184f",
-   "metadata": {
-    "language": "sql",
-    "name": "AI_EXTRACT_resumes"
-   },
-   "outputs": [],
-   "source": "SELECT \n  json_data:response.name::STRING as name,\n  json_data:response.email::STRING as email,\n  json_data:response.phone::STRING as phone_number\nfrom\n(\nSELECT AI_EXTRACT(\n  file => TO_FILE('@EXAMPLE_DOCS/resumes','resume-sample-2-13-1.pdf'),\n  responseFormat => [['name', 'What is the name of the resume applicant?'], \n  ['email', 'What is the email of the resume applicant?'],\n  ['phone', 'What is the phone number of the resume applicant?']]\n) as json_data);",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e2bffbc-6c14-4da3-8b3e-4753e3276cca",
-   "metadata": {
-    "name": "parse_intro",
-    "collapsed": false
-   },
-   "source": "Parse text from a resume using AI_PARSE_DOCUMENT"
-  },
-  {
-   "cell_type": "code",
-   "id": "18b8a706-6e35-44c3-8d1a-40d899038378",
-   "metadata": {
-    "language": "sql",
-    "name": "parse_resume"
-   },
-   "outputs": [],
-   "source": "SELECT \nrelative_path,\nAI_PARSE_DOCUMENT(TO_FILE('@EXAMPLE_DOCS',relative_path)):content::STRING AS resume_text,\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'resumes/%'\nlimit 5;",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4c3b1dd-318c-4385-b678-b58d1d3f5e52",
-   "metadata": {
-    "name": "candidate_intro",
-    "collapsed": false
-   },
-   "source": "Combine PARSE_DOCUMENT and AI_EXTRACT to create candidates table"
-  },
-  {
-   "cell_type": "code",
-   "id": "d1a9b5f1-93b8-40bf-9ded-9e4511242cf3",
-   "metadata": {
-    "language": "sql",
-    "name": "create_candidate_table"
-   },
-   "outputs": [],
-   "source": "create or replace table candidates as \nSELECT \n  json_data:response.name::STRING as name,\n  json_data:response.email::STRING as email,\n  json_data:response.phone::STRING as phone_number,\n  resume_text,\n  relative_path as resume_file_path,\nfrom\n(\nSELECT \n    relative_path,\n    \n    AI_EXTRACT(\n        file => TO_FILE('@EXAMPLE_DOCS',relative_path),\n        responseFormat => [['name', 'What is the name of the resume applicant?'], \n          ['email', 'What is the email of the resume applicant?'],\n          ['phone', 'What is the phone number of the resume applicant?']]\n    ) as json_data,\n    \n    AI_PARSE_DOCUMENT(TO_FILE('@EXAMPLE_DOCS',relative_path)):content::STRING AS resume_text,\n\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'resumes/%');\n\nselect * from candidates;",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd2fd6ea-a0f7-44d6-aa90-54bd955de5be",
-   "metadata": {
-    "name": "jobs_intro",
-    "collapsed": false
-   },
-   "source": "Create Jobs table"
-  },
-  {
-   "cell_type": "code",
-   "id": "4848ac51-d701-4f9f-8ac1-58be19361ce1",
-   "metadata": {
-    "language": "sql",
-    "name": "create_jobs_table"
-   },
-   "outputs": [],
-   "source": "-- Create table\nCREATE OR REPLACE TABLE JOBS (\n  job_id INTEGER AUTOINCREMENT,\n  job_title VARCHAR,\n  job_category VARCHAR,\n  job_description VARCHAR,\n  created_at TIMESTAMP_NTZ DEFAULT CURRENT_TIMESTAMP,\n  PRIMARY KEY (job_id)\n);\n\n-- Seed data (10 rows)\nINSERT INTO JOBS (job_title, job_category, job_description) VALUES\n  ('Network Engineer', 'computer networking',\n   'Design, implement, and troubleshoot enterprise LAN/WAN and wireless networks. Configure routers, switches, and firewalls with high availability. Monitor performance using SNMP/NetFlow and packet analysis. Collaborate on capacity planning and network upgrades.'),\n  ('Network Security Analyst', 'computer networking',\n   'Monitor and analyze network traffic for threats and anomalies. Manage firewalls, IDS/IPS, and VPNs following zero-trust principles. Investigate incidents and produce actionable remediation plans. Maintain security baselines and compliance documentation.'),\n  ('Backend Software Engineer', 'software development',\n   'Build scalable APIs and services with robust domain models and clean interfaces. Optimize data access patterns and background processing. Write comprehensive tests and instrumentation for reliability. Participate in code reviews and architecture discussions.'),\n  ('Software Engineer', 'software development',\n   'Develop responsive, accessible web interfaces with modern frameworks. Integrate APIs and manage application state efficiently. Optimize performance, bundle size, and rendering. Maintain a high-quality component library and UI tests.'),\n  ('DevOps Engineer', 'software development',\n   'Automate CI/CD pipelines and infrastructure as code. Improve observability with logs, metrics, and tracing. Harden deployments with blue/green and canary strategies. Optimize cost and reliability across environments.'),\n  ('Data Engineer', 'software development',\n   'Design and maintain reliable ETL/ELT pipelines and data models. Orchestrate workflows and ensure data quality and lineage. Tune warehouses and storage for performance. Partner with analytics and ML teams on scalable datasets.'),\n  ('Marketing Manager', 'marketing',\n   'Own go-to-market plans and integrated campaigns across channels. Define positioning, messaging, and audience segmentation. Track funnel metrics and ROI to optimize spend. Coordinate launches with sales and product teams.'),\n  ('Digital Marketing Specialist', 'marketing',\n   'Execute SEO, SEM, and paid social campaigns end-to-end. Create and test creatives and landing pages for conversion. Analyze performance and run A/B tests to improve CAC. Maintain accurate tracking and attribution.'),\n  ('Corporate Trainer', 'personnel training',\n   'Deliver engaging instructor-led and virtual training programs. Assess skill gaps and tailor curricula to business goals. Measure learning outcomes and iterate content. Coach subject matter experts to scale delivery.'),\n  ('Instructional Designer', 'personnel training',\n   'Design learner-centered courses using modern instructional frameworks. Develop eLearning modules, labs, and assessments. Align objectives with measurable outcomes. Maintain content libraries and update materials regularly.');",
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "03fff09e-cb6a-407b-9ac1-385ad79dc3d1",
-   "metadata": {
-    "language": "sql",
-    "name": "join_candidate_w_job"
-   },
-   "outputs": [],
-   "source": "SELECT job_title, job_description, resume_text, name, email, phone_number\nFROM candidates c\nJOIN JOBS j\nON AI_FILTER(PROMPT('Does the following resume {0} fit this job description {1}?', c.resume_text, j.job_description));",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6798c01-c188-4cda-ab06-94df686c5eab",
-   "metadata": {
-    "name": "AI_CLASSIFY_intro",
-    "collapsed": false
-   },
-   "source": "Classify candidates as entry level, management level, or executive"
-  },
-  {
-   "cell_type": "code",
-   "id": "ff792581-d32a-4693-b55a-059eb7e2a042",
-   "metadata": {
-    "language": "sql",
-    "name": "classify_candidates"
-   },
-   "outputs": [],
-   "source": "Select *,\n    AI_CLASSIFY(\n        resume_text, \n        ['entry level', 'management level', 'executive level'],\n        {\n            'task_description':'Categorize the candidate into one of the given levels of expertise'\n        }):labels[0]::string as expertise\nfrom candidates;",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7856588a-f71a-4502-911c-502979199606",
-   "metadata": {
-    "name": "summarize",
-    "collapsed": false
-   },
-   "source": "Use AI_AGG to extract skills accross expertise"
-  },
-  {
-   "cell_type": "code",
-   "id": "020ff151-462b-48bb-95e4-b44f6fb2d7f7",
-   "metadata": {
-    "language": "sql",
-    "name": "experties_table"
-   },
-   "outputs": [],
-   "source": "create or replace temporary table expertise as\nSelect resume_text,\n    AI_CLASSIFY(\n        resume_text, \n        ['entry level', 'management level', 'executive level'],\n        {\n            'task_description':'Categorize the candidate into one of the given levels of expertise'\n        }):labels[0]::string as expertise\nfrom candidates;",
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "64b031db-10b3-4bc0-8130-7908e5ec3989",
-   "metadata": {
-    "language": "sql",
-    "name": "AI_AGG_GROUP_BY"
-   },
-   "outputs": [],
-   "source": "SELECT expertise,\n       AI_AGG(resume_text, 'What are some common skills across these resumes?  List them in an array []') AS summarized_resumes\nFROM expertise\nGROUP BY expertise;",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "920d99b4-9bf0-4286-8bc5-b2b20751b6e6",
-   "metadata": {
-    "name": "AI_AGG_Intro",
-    "collapsed": false
-   },
-   "source": "Use AI_AGG to look across all of the machine reports and identify patterns"
-  },
-  {
-   "cell_type": "code",
-   "id": "e97b6f4d-8bd2-4a46-a772-218402441f02",
-   "metadata": {
-    "language": "sql",
-    "name": "AI_AGG"
-   },
-   "outputs": [],
-   "source": "with parsed_reports as (\nSELECT \nSNOWFLAKE.CORTEX.PARSE_DOCUMENT('@EXAMPLE_DOCS',relative_path):content::STRING AS report_text\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'machine_reports/%'\n)\nSelect \n    AI_AGG(report_text, 'What were the main reasons for machines not passing inspection?')\nfrom parsed_reports;",
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d9a349c-3115-4c0f-bb82-1128e75a6442",
-   "metadata": {
-    "name": "sentiment_intro",
-    "collapsed": false
-   },
-   "source": "Now let's use AI_SENTIMENT to extract sentiment from movie reviews"
-  },
-  {
-   "cell_type": "code",
-   "id": "d01951a6-f65e-40b4-b877-d0b0356036f2",
-   "metadata": {
-    "language": "python",
-    "name": "load_reviews"
-   },
-   "outputs": [],
-   "source": "movies = pd.read_csv('data/movie_reviews_dataset.csv')\nmovies.columns = [c.upper() for c in movies.columns]\nmovies_sf = session.create_dataframe(movies)\nmovies_sf.write.mode(\"overwrite\").save_as_table(\"movie_reviews\")",
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "9de59c78-b5c5-4f48-9e8f-b0918fe095c2",
-   "metadata": {
-    "language": "sql",
-    "name": "show_reviews"
-   },
-   "outputs": [],
-   "source": "select * from movie_reviews",
+   "source": "SELECT \nrelative_path,\n  json_data:response.date::STRING as response_date,\n  json_data:response.name::STRING as inspector,\n  json_data:response.grade::STRING as grade,\n  json_data:response.machine::STRING as machine\nfrom\n(\nSELECT \nrelative_path,\nAI_EXTRACT(\n  model => 'DEMO.PUBLIC.MACHINE_DOCS_FINE_TUNED',\n  file => TO_FILE('@EXAMPLE_DOCS',RELATIVE_PATH),\n  responseFormat => [['name', 'Who inspected the machine?'], \n  ['date', 'What was the date of the inspection?'],\n  ['grade', 'What was the grade of the inspection?'],\n  ['machine', 'What machine was inspected?']]\n) as json_data\nfrom DIRECTORY(@EXAMPLE_DOCS)\nwhere relative_path like 'machine_reports/%'\n);",
    "execution_count": null
   },
   {
