--- a/ENTITY_RESOLUTION/BATCH_SEARCH.ipynb
+++ b/ENTITY_RESOLUTION/BATCH_SEARCH.ipynb
@@ -20,9 +20,7 @@
     "try:\n",
     "    session = get_active_session()\n",
     "except:\n",
-    "    session = Session.builder.create()\n",
-    "\n",
-    "session = get_active_session()\n"
+    "    session = Session.builder.create()"
    ]
   },
   {
