--- a/Machine_Learning_Training/2_Deploy_to_container.ipynb
+++ b/Machine_Learning_Training/2_Deploy_to_container.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9739eb3e-d3d6-4fbe-bcf3-1bd0f2d8b6a5",
    "metadata": {
     "language": "python",
@@ -82,7 +82,9 @@
     "except:\n",
     "    print(\"Table not found! Uploading data to snowflake table\")\n",
     "    df_pandas = pd.read_csv(\"MORTGAGE_LENDING_DEMO_DATA.csv.zip\")\n",
-    "    session.write_pandas(df_pandas, \"MORTGAGE_LENDING_DEMO_DATA\", auto_create_table=True)\n",
+    "    session.write_pandas(\n",
+    "        df_pandas, table_name=\"MORTGAGE_LENDING_DEMO_DATA\",database= DB,schema=SCHEMA, auto_create_table=True\n",
+    "    )\n",
     "    df = session.table(f\"{DB}.{SCHEMA}.MORTGAGE_LENDING_DEMO_DATA\").to_pandas()\n",
     "    print(df.head(5))"
    ]
