add DB and Schema

--- a/Machine_Learning_Training/4_Remote_ml_jobs.ipynb
+++ b/Machine_Learning_Training/4_Remote_ml_jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "3775908f-ca36-4846-8f38-5adca39217f2",
    "metadata": {
     "language": "python",
@@ -39,7 +39,11 @@
     "COMPUTE_WAREHOUSE = 'DEMO_WH'\n",
     "model_name = 'MORTGAGE_LENDING_MLOPS'\n",
     "pool_name = \"MORTGAGE_LENDING_TRAIN\"\n",
-    "STAGE = \"ML_STAGE\""
+    "STAGE = \"ML_STAGE\"\n",
+    "\n",
+    "session.use_database(DB)\n",
+    "session.use_schema(SCHEMA)\n",
+    "session.use_warehouse(COMPUTE_WAREHOUSE)"
    ]
   },
   {
